--- a/Page transition with GSAP/style.css
+++ b/Page transition with GSAP/style.css
@@ -70,6 +70,7 @@ img{
     justify-content: flex-start;
     align-items: center;
     padding: 8rem 7rem 0 7rem;
+    transform: translateY(100%);
 }
 
 .intro .hero .left-hero{
@@ -90,7 +91,7 @@ img{
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #18181a;
+    background-color: #aaaaaf;
     width: 100%;
     height: 100%;
     transform: translateY(100%);
