--- a/image search/style.css
+++ b/image search/style.css
@@ -84,3 +84,18 @@ form{
     padding: 10px;
     text-transform: capitalize;
 }
+
+
+#show-more-button{
+    padding: 10px 20px;
+    background-color: rgb(25, 114, 107);
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 30px auto;
+    text-align: center;
+    display: block;
+    display: none;
+}
