--- a/image search/style.css
+++ b/image search/style.css
@@ -99,3 +99,19 @@ form{
     display: block;
     display: none;
 }
+
+@media screen and (max-width:768px) {
+    .search-results{
+        padding: 20px;
+    }
+    .search-result{
+        width: 45%;
+    }
+}
+
+@media  screen and (max-width: 480px) {
+    .search-result{
+        width: 100%;
+    }
+    
+}
